# timeseries-council

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  NOTICE  README.md  config.yaml  pyproject.toml  setup.py
.github/workflows/: ci.yml
data/: sample_multi_metric.csv  sample_sales.csv  sample_stock.csv
docs/: create_council_gif.py  index.html
docs/css/: style.css
docs/js/: main.js
examples/: demo.ipynb  finetune_vertex.py  generate_training_data.py  sample_data.py
src/data/: data_utils.py  dataset_list.py  read_new_dataset.py
src/data/augmentations/: __init__.py  augmentations.py  freq_mask.py  freq_mix.py
src/gluon_utils/gluon_ts_distributions/: implicit_quantile_network.py
src/gluon_utils/scalers/: robust_scaler.py
src/lag_llama/gluon/: estimator.py
src/timeseries_council/: __init__.py  config.py  exceptions.py  logging.py  orchestrator.py  setup_models.py  types.py  version.py
src/timeseries_council/cli/: __init__.py  main.py
src/timeseries_council/council/: __init__.py  council.py  multi_llm_council.py  roles.py
src/timeseries_council/detectors/: __init__.py  base.py  factory.py  isolation_forest.py  llm_detector.py  lof.py  lstm_vae.py  mad.py  merlion_detectors.py  moirai.py  pyod_detectors.py  rule_detector.py  zscore.py
src/timeseries_council/forecasters/: __init__.py  base.py  chronos.py  factory.py  lag_llama.py  llm_forecaster.py  moirai.py  moirai_agent.py  timesfm.py  tirex.py  zscore_baseline.py
src/timeseries_council/integrations/: __init__.py
src/timeseries_council/multi_model/: __init__.py  characteristics.py  cross_validation.py  ensemble.py  quantile_ensemble.py  selector.py
src/timeseries_council/providers/: __init__.py  anthropic.py  base.py  deepseek.py  factory.py  gemini.py  openai_provider.py  qwen.py
src/timeseries_council/skills/: __init__.py  executor.py  generator.py  loader.py  registry.py  sandbox.py
src/timeseries_council/skills/definitions/: analysis.md  anomaly_detection.md  forecasting.md  simulation.md
src/timeseries_council/tools/: __init__.py  _utils.py  analysis.py  anomaly.py  backtesting.py  context_forecast.py  forecasting.py  model_selector.py  registry.py  simulation.py
src/timeseries_council/utils/: __init__.py  data_loader.py  date_parsing.py
src/timeseries_council/web/: __init__.py  app.py  chat_history.py  download.py  models.py  progress.py  routes.py
src/timeseries_council/web/static/css/: style.css  vue-components.css
src/timeseries_council/web/static/js/: vue-app.js
src/timeseries_council/web/static/js/components/: ChatInterface.js  CouncilView.js  FileUploader.js  LandingPage.js  ModeSelector.js  ThinkingView.js  TimeSeriesChart.js
src/timeseries_council/web/templates/: index.html
src/utils/: utils.py
tests/: conftest.py  test_orchestrator.py  test_tools.py
tests/test_detectors/: test_detectors.py  test_moirai_detector.py
tests/test_forecasters/: test_forecasters.py
tests/test_providers/: __init__.py  test_providers.py
